@@ -202,6 +202,17 @@
 						<option value="Ukrainian">Ukrainian</option>
 					</select>
 				</li>
+				<li class="header" id="homepage_text">Homepage</li>
+				<li><label for="homepage_default_tab" id="homepage_default_tab_text">Default homepage tab:</label>
+					<select id="homepage_tab_selection">
+						<option value="remember">Remember Previous</option>
+						<option value="tab_1_content">New Releases</option>
+						<option value="tab_2_content">Top Sellers</option>
+						<option value="tab_3_content">Coming Soon</option>
+						<option value="tab_discounts_content">Specials</option>
+						<option value="es_popular">Popular</option>
+					</select>
+				</li>
 				<li class="header" id="library_text">Library (BETA)</li>
 				<li><input type="checkbox" id="showlibrarymenu"><label for="showlibrarymenu" id="store_show_library_text">Show Library button in header</label></li>
 				<li><input type="checkbox" id="showlibraryf2p"><label for="showlibraryf2p" id="store_show_library_f2p_text">Show played free to play games and demos in library</label></li>
